--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -37,7 +37,7 @@
         android:id="@+id/text_full_name"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="3"
+        android:layout_weight="4"
         android:maxWidth="120dp"
         android:textSize="18sp"
         android:text="Theresa May"
@@ -53,8 +53,9 @@
         android:layout_height="match_parent"
         android:textSize="14sp"
         android:maxWidth="60dp"
-        android:layout_weight="2"
-        android:gravity="center_vertical|right"
+        android:layout_weight="3"
+        android:maxLines="2"
+        android:gravity="center_vertical|end"
         android:text="Golders Green"
         android:textColor="@color/colorPrimaryDark"/>
 
