--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scroll_view"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_client"
@@ -15,6 +19,8 @@
         android:id="@+id/text_client_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="@color/colorPrimary"
         android:text="Mrs" />
 
     <TextView
@@ -36,13 +42,59 @@
         android:text="Westminster"
         android:textStyle="italic" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text_client_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_alignParentStart="true"
+            android:text="12:00" />
+
+        <TextView
+            android:id="@+id/text_fixed_to"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_alignParentStart="true"
+            android:text=" to " />
+
+        <TextView
+            android:id="@+id/text_client_time_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_alignParentStart="true"
+            android:text="13:00" />
+
+
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/text_client_time"
+        android:id="@+id/text_fixed_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:layout_alignParentStart="true"
-        android:text="12:00" />
+        android:text="Address:"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_marginTop="50px"/>
+
+    <TextView
+        android:id="@+id/text_address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="24 Downing Street"
+        android:textSize="20sp"/>
+    <TextView
+        android:id="@+id/text_postcode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SE1 PPP"
+        android:textSize="20sp"/>
 
 
     <TextView
@@ -69,3 +121,4 @@
 
 
 </LinearLayout>
+</ScrollView>
