--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         app:srcCompat="@drawable/final_logo" />
 
     <EditText
-        android:id="@+id/text_username"
+        android:id="@+id/text_carer_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="18dp"
