--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -33,6 +33,15 @@
     android:text="Theresa" />
 
     <TextView
+        android:id="@+id/text_client_middle_name"
+        android:layout_width="302dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="20sp"
+        android:textColor="@color/colorPrimaryDark"
+        android:text="" />
+
+    <TextView
         android:id="@+id/text_client_surname"
         android:layout_width="302dp"
         android:layout_height="wrap_content"
@@ -57,7 +66,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/text_client_time"
+            android:id="@+id/text_client_start_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -73,7 +82,7 @@
             android:text=" to " />
 
         <TextView
-            android:id="@+id/text_client_time_end"
+            android:id="@+id/text_client_end_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -81,7 +90,26 @@
             android:text="13:00" />
 
 
+
+
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/text_fixed_level_vulnerability"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="Level of Vulnerability:"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_marginTop="50px"/>
+
+    <TextView
+        android:id="@+id/text_client_level_vulnerability"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Medium"
+        android:textSize="20sp"/>
+
 
     <TextView
         android:id="@+id/text_fixed_address"
@@ -92,14 +120,16 @@
         android:textColor="@color/colorPrimaryDark"
         android:layout_marginTop="50px"/>
 
+
+
     <TextView
-        android:id="@+id/text_address"
+        android:id="@+id/text_client_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="24 Downing Street"
         android:textSize="20sp"/>
     <TextView
-        android:id="@+id/text_postcode"
+        android:id="@+id/text_client_postcode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SE1 PPP"
@@ -116,10 +146,25 @@
         android:layout_marginTop="50px"/>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/text_client_general_information"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
+
+    <TextView
+        android:id="@+id/text_fixed_keycode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="Keysafe Code:"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_marginTop="50px"/>
+
+    <TextView
+        android:id="@+id/text_client_keycode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Client will provide access"/>
 
     <Button
         android:id="@+id/btn_maps"
@@ -127,6 +172,15 @@
         android:layout_height="wrap_content"
         android:text="Look in Maps"
         android:layout_marginTop="50sp"/>
+
+
+    <Button
+        android:id="@+id/btn_report"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Report"
+        android:layout_marginTop="50sp"/>
+
 
 
 </LinearLayout>
