Handle in ClientAcitivty the case where a client does not have a middle name by programmatically removing if an empty string is passed.

--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -38,8 +38,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:textSize="20sp"
-        android:textColor="@color/colorPrimaryDark"
-        android:text="" />
+        android:textColor="@color/colorPrimaryDark" />
 
     <TextView
         android:id="@+id/text_client_surname"
