--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF5E42</color>
+    <color name="colorPrimary">#FF7259</color>
     <color name="colorPrimaryDark">#29335C</color>
     <color name="colorAccent">#FFA400</color>
     <color name="whitePlatinum">#E6E6EA</color>
