--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -37,10 +37,10 @@
         android:id="@+id/text_name"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="4"
         android:maxWidth="120dp"
         android:textSize="18sp"
         android:text="Theresa"
+        android:layout_marginEnd="8dp"
         android:gravity="center"
         android:maxLines="2"
         android:textStyle="bold"
@@ -50,7 +50,6 @@
         android:id="@+id/text_surname"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="4"
         android:maxWidth="120dp"
         android:textSize="18sp"
         android:text="May"
