--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -25,12 +25,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:lineSpacingExtra="4dp"
         android:text="Thank you for your interest in the Social Care App. At the moment the application is in alpha."
         android:layout_marginBottom="16dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:lineSpacingExtra="4dp"
         android:text="You can find more information in my github:"
         android:layout_marginBottom="16dp"/>
     <TextView
@@ -43,6 +45,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:lineSpacingExtra="4dp"
         android:text="In order to log in in the application a manager must have provided you with a username and password."
         android:layout_marginBottom="16dp"/>
 
