--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -209,7 +209,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorWhite"
         android:text="Look in Maps"
         android:layout_marginBottom="16dp"/>
 
@@ -218,7 +218,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorWhite"
         android:text="Report"/>
 
 
