--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -102,6 +102,8 @@
             android:id="@+id/text_fixed_to"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
             android:textSize="20sp"
             android:layout_alignParentStart="true"
             android:text="@string/to" />
